# A_lang

./: CMakeLists.txt  instruction.c  instruction.h  machine.c  machine.h  main.c  stack.c
machine/: error.h  instruction.c  instruction.h  machine.c  machine.h  main.c  stack.c  stack.h
